# file-upload

./: .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/api/: auth.py
app/core/: security.py
app/crud/: user.py
app/models/: user.py
app/schemas/: file.py  user.py
migrations/: env.py
migrations/versions/: 193f603a4050_initial_migration.py  82f59c45154e_added_path_to_file_entity.py  ad06fa77519b_added_added_at_field_in_file_model.py
src/: api.py  main.py
src/auth/: controller.py  models.py  service.py
src/entities/: enums.py  file.py  user.py
src/files/: controller.py  models.py  service.py
src/users/: models.py  service.py
